[metadata]
name = mcpid
author = Jacan Chaplais
author_email = jacanchaplais@gmail.com
description = Numpy interface to MCPID / PDG data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacanchaplais/mcpid
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = mcpid
install_requires =
    numpy
    pandas
include_package_data = True
